Fix horizontal scrolling
Fixes #42

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,7 @@
 // These are the U.S. Design Standards variables (color definitions, etc.)
 @import "core/variables";
 
+@media screen and (max-width: 600px) { .ood-mobile-hide { display: none; } }
 @media screen and (max-width: 1200px) { .ood-narrow-hide { display: none; } }
 @media screen and (min-width: 1201px) { .ood-wide-hide { display: none; } }
 
@@ -206,28 +207,30 @@ main > .ood-alt2 {
     }
   }
 
-  .ood-middle {
-    position: relative;
+  @media screen and (min-width: 600px) {
+    .ood-middle {
+      position: relative;
 
-    &:before,
-    &:after {
-      content: '';
-      width: 32px;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      display: block;
-      z-index: -1;
-    }
+      &:before,
+      &:after {
+        content: '';
+        width: 32px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        display: block;
+        z-index: -1;
+      }
 
-    &:before {
-      left: -24px;
-      box-shadow: 32px 0 0 0 #fff, 0 -32px 0 0 #fff, 0 32px 0 0 #fff, 32px 32px 0 0 #fff, 32px -32px 0 0 #fff, 0 0 32px 0 rgba(0, 0, 0, 0.15);
-    }
+      &:before {
+        left: -24px;
+        box-shadow: 32px 0 0 0 #fff, 0 -32px 0 0 #fff, 0 32px 0 0 #fff, 32px 32px 0 0 #fff, 32px -32px 0 0 #fff, 0 0 32px 0 rgba(0, 0, 0, 0.15);
+      }
 
-    &:after {
-      right: -24px;
-      box-shadow: -32px 0 0 0 #fff, 0 -32px 0 0 #fff, 0 32px 0 0 #fff, -32px 32px 0 0 #fff, -32px -32px 0 0 #fff, 0 0 32px 0 rgba(0, 0, 0, 0.15);
+      &:after {
+        right: -24px;
+        box-shadow: -32px 0 0 0 #fff, 0 -32px 0 0 #fff, 0 32px 0 0 #fff, -32px 32px 0 0 #fff, -32px -32px 0 0 #fff, 0 0 32px 0 rgba(0, 0, 0, 0.15);
+      }
     }
   }
 }
@@ -247,9 +250,21 @@ main > .ood-alt2 {
 }
 
 .ood-repo {
-  float: right;
   margin: 0;
   font-size: smaller;
+
+  @media screen and (max-width: 480px) {
+    margin-top: 1em;
+  }
+
+  @media screen and (min-width: 480px) {
+    float: right;
+  }
+
+  @media screen and (min-width: 481px) and (max-width: 600px) {
+    // ugly hack, but no simple IU that looks good in this width band
+    display: none;
+  }
 }
 
 .ood-gallery-item {
